--- a/style.css
+++ b/style.css
@@ -7,4 +7,42 @@
 .align-input{
     display: flex;
     gap: 10px;
+
+   
+}
+
+
+.alert-message{
+    
+    animation: toEmerge 3000ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+    position: absolute !important;
+    top: 10px;   
+    
+}
+
+/* .alert-message-out{
+    animation: toEmerge 500ms cubic-bezier(0.075, 0.82, 0.165, 1) reverse;
+    position: absolute !important;
+    top: -150px;   
+} */
+
+@keyframes toEmerge{
+    0%{
+        top: -150px;  
+    }
+
+    10%{
+        top: 10px;
+    }
+    80%{
+        top: 10px;  
+    }
+
+    99%{
+        top: -60px
+    }
+
+    100%{
+        top: -150px
+    }
 }
